--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,3 +1,4 @@
+@import '~@mdi/font/scss/materialdesignicons.scss';
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600&display=swap');
 
 html, body {
@@ -10,5 +11,6 @@ html, body {
 body {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 16px;
-    background: #f1f1f1;
+    background: #111111;
+    color: #fff;
 }
