--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -21,7 +21,7 @@ body {
 .wrapper {
     padding: 25px;
 }
-input[type="text"], input[type="email"], input[type="password"] {
+input[type="text"], input[type="email"], input[type="password"], input[type="number"] {
     border: 0;
     color: #fff;
     padding: 7px 15px;
